<resources>
    <string name="app_name">TP-AMov</string>
    <string name="modo_1">Single Player</string>
    <string name="modo_2">1 vs 1 - Local</string>
    <string name="modo_3">Online</string>
    <string name="comecar">Começar</string>
    <string name="username">Username</string>
    <string name="highlight_editable_setting">Highlight Editable Cells</string>
    <string name="highlight_editable_setting_condensed">Highlight Cells</string>
    <string name="username_player_1">Username (player 1)</string>
    <string name="username_player_2">Username (player 2)</string>
    <string name="dark_ui">Dark UI</string>
    <string name="score">SCORE:</string>
    <string name="_0">0</string>
    <string name="game_mode">Modo de Jogo</string>
    <string name="usar_webservice">Usar Webservice</string>
    <string name="menu_inicial">Menu Inicial</string>
    <string name="pontuacao">Pontuação: </string>
    <string name="ganhou">Ganhou!</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="adicionar_imagem">Adicionar Imagem</string>
    <string name="tirar_uma_fotografia">Tirar uma Fotografia</string>
    <string name="procurar_fotografia">Procurar Fotografia</string>
    <string name="usar_imagem_armazenada">Atualizar imagem armazenada</string>
    <string name="x">x</string>
</resources>
