<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".SelectUserFragmentM2">

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/txt_username_p1"
            app:layout_constraintVertical_chainStyle="packed"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username_player_1"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/txt_username_p1" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_m1m3"/>
    <Button
            android:text="@string/comecar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_start_m1m3"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txt_username_p1"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/txt_username_p2"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username_player_2"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/txt_username_p2"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_m1m3"
            app:layout_constraintBottom_toTopOf="@+id/profile_image2"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image2"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_username_p2" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>